--- a/3e9a1c72-4f8b-4d2a-9b6e-2c4f7d8a5b34-fd1.md
+++ b/3e9a1c72-4f8b-4d2a-9b6e-2c4f7d8a5b34-fd1.md
@@ -6,6 +6,7 @@
 - Departs: 6.05am (28 Nov)
 - Arrives: 7:45am (28 Nov)
 - Total: 3h 40m
+- Seats: 12D, 12C, 12B, 12A
 - Booking reference: E678DU
 
 ## Transit
@@ -18,4 +19,14 @@
 - Departs 11:15am (28 Nov)
 - Arrives 5:50pm (28 Nov)
 - Total: 9h 35m
+- Seats: 46D, 46E, 46F, 46G
+- Booking reference: E678DU
+
+## HK > ICN
+
+- Cathay Pacific: CX418
+- Departs 2:05pm (1 Dec)
+- Arrives 6:35pm (1 Dec)
+- Total: 3h 30m
+- Seats: 23H, 23C, 23B, 23A
 - Booking reference: E678DU
