--- a/3e9a1c72-4f8b-4d2a-9b6e-2c4f7d8a5b34-fd1.md
+++ b/3e9a1c72-4f8b-4d2a-9b6e-2c4f7d8a5b34-fd1.md
@@ -30,3 +30,13 @@
 - Total: 3h 30m
 - Seats: 23H, 23C, 23B, 23A
 - Booking reference: E678DU
+
+# Hotel
+
+Hong Kong SkyCity Marriott Hotel
+- Fri 28 Nov - Mon 1 Dec
+- Booking name: Caleb Garratt
+- Confirmation number: 1945860727
+- Phone: +852 3969 1888
+- Address: 1 Sky City Road East, Hong Kong
+
