--- a/170cc805-63d0-4fe6-a1e1-82b6bbd47261-macao.md
+++ b/170cc805-63d0-4fe6-a1e1-82b6bbd47261-macao.md
@@ -15,3 +15,68 @@
 - **[Cost](guide://tell-more)**: Around HK$65–HK$75 per adult (children and seniors discounted).
 - **[Tickets](guide://tell-more)**: Buy at the Hong Kong Port ticket counters or online via the HZM Bus website.
 - **[Immigration](guide://tell-more)**: You’ll need to clear Hong Kong exit immigration and Macau entry immigration at the respective ports, so keep your passport ready.
+
+
+
+## 🗺 Suggested One‑Day Itinerary (Start/End: Zhuhai Port)
+
+### Morning
+- **[Macao Tower Observation Deck](guide://tell-more)**  
+  - Taxi from Zhuhai Port (~15 min).  
+  - Arrive early (opens ~11 am) for clear views before haze builds.  
+  - Spend ~1 hour.  
+- **[Lou Lim Loc Garden](guide://tell-more)**  
+  - Taxi or bus (~10 min).  
+  - Peaceful Suzhou‑style garden, good contrast to the tower.  
+  - 30–40 min stroll.  
+- **[Mandarin’s House](guide://tell-more)**  
+  - Walk or short taxi from Lou Lim Loc.  
+  - Explore courtyards and Qing‑era domestic life.  
+  - 45 min.  
+
+### Lunch
+- **Near Senado Square**: Try *Portuguese/Macanese fusion* at **Mariazinha** or casual dim sum at **Tou Tou Koi**. Both are walking distance from the heritage cluster.  
+
+### Early Afternoon
+- **[Senado Square](guide://tell-more)** → **[Ruins of St. Paul’s](guide://tell-more)** → **[Monte Fort](guide://tell-more)**  
+  - All within 10–15 minutes’ walk.  
+  - Senado Square for photos, then climb to Ruins of St. Paul’s, continue up to Monte Fort for skyline views.  
+  - Allocate ~2 hours for the whole loop.  
+
+### Mid Afternoon
+- **[Guia Fortress](guide://tell-more)**  
+  - Taxi from Monte Fort (~10 min).  
+  - Walk or cable car up Guia Hill.  
+  - 45–60 min for lighthouse and chapel.  
+
+### Evening
+- **Cotai Strip: Venetian Macao + Grand Canal Shoppes + Wynn Macau**  
+  - Taxi from Guia Fortress (~20 min).  
+  - Start at **Wynn Macau** (Performance Lake fountain show, Tree of Prosperity).  
+  - Continue to **Venetian Macao**: wander the Grand Canal Shoppes, maybe ride a gondola, enjoy dinner.  
+  - Dinner options:  
+    - **Portofino** (Italian, Venetian Macao).  
+    - **North Palace** (Northern Chinese, Venetian Macao).  
+    - Casual food courts if you want quick bites.  
+
+### Return
+- Taxi back to **Zhuhai Port** (~20–25 min).  
+
+---
+
+## 🕒 Time Budget
+- Morning cluster (Tower + Garden + Mandarin’s House): ~3 hrs  
+- Lunch: ~1 hr  
+- Heritage cluster (Senado + Ruins + Monte Fort): ~2 hrs  
+- Guia Fortress: ~1 hr  
+- Evening Cotai Strip (Wynn + Venetian): ~3 hrs  
+- Transport buffer: ~2 hrs total  
+➡️ **Approx. 12 hrs** — doable if you start around 10 am and finish by 10 pm.  
+
+---
+
+## ✂️ Suggested Trim
+If you want breathing room:  
+- Skip **Lou Lim Loc Garden** (similar vibe to Mandarin’s House, slower pace).  
+- Or skip **Guia Fortress** if you prefer more time shopping/dining in Cotai.  
+
