--- a/170cc805-63d0-4fe6-a1e1-82b6bbd47261-macao.md
+++ b/170cc805-63d0-4fe6-a1e1-82b6bbd47261-macao.md
@@ -80,3 +80,33 @@ If you want breathing room:
 - Skip **Lou Lim Loc Garden** (similar vibe to Mandarin’s House, slower pace).  
 - Or skip **Guia Fortress** if you prefer more time shopping/dining in Cotai.  
 
+
+
+
+# My simple plan
+
+#### macao island
+
+monte forte, macao island (FREE to ground, cost to museum) - good for sunset views
+
+senado square - macao island (FREE)
+
+lou lim loc garden, macao island (FREE)
+
+guia fortress, macao island (FREE)
+
+mandarin's house (casa do mandarim) - macao island (FREE)
+
+golden tree of prosperity, wynn macau - macao island
+
+dancing fountain, wynn macau - macao island
+
+#### Cotai island
+
+Grand Canal Shoppes (mall styled like Venice) - The Venetian Macao, Cotai Island (FREE)
+
+teamlab supernature - The Venetian Macao, Cotai island (~US$36ea)
+
+gondola experience - Venetian, cotai island (~US19ea)
+
+City of Dreams shopping mall - near venetian, Cotai island (FREE)
