--- a/170cc805-63d0-4fe6-a1e1-82b6bbd47261-macao.md
+++ b/170cc805-63d0-4fe6-a1e1-82b6bbd47261-macao.md
@@ -110,3 +110,37 @@ teamlab supernature - The Venetian Macao, Cotai island (~US$36ea)
 gondola experience - Venetian, cotai island (~US19ea)
 
 City of Dreams shopping mall - near venetian, Cotai island (FREE)
+
+
+# macao pass
+
+### 🛒 Where to Buy
+- **[Convenience stores](guide://tell-more)**: 7‑Eleven, Circle‑K, Sunsco, US Mart.  
+- **[Supermarkets](guide://tell-more)**: Many local supermarkets sell the card at the cashier.  
+- **[Customer service centers](guide://tell-more)**:  
+  - Macau Pass World Trade Centre Service Center  
+  - Macau Pass Northern Service Center  
+- **[Transport hubs](guide://tell-more)**: Outer Ferry Terminal and some bus terminals.  
+- **[On buses](guide://tell-more)**: In some cases, cards can be purchased directly from bus drivers, though availability is limited.  
+
+---
+
+### 💳 Card Details
+- **[Cost](guide://tell-more)**: Around MOP 130 (≈US$16), which includes a refundable deposit and stored value.  
+- **[Usage](guide://tell-more)**: Works on buses, LRT, parking meters, vending machines, and many shops.  
+- **[Discounts](guide://tell-more)**: Bus fares are cheaper with the card (e.g., MOP 6 cash fare → MOP 3 with Macau Pass).  
+- **[Reloading](guide://tell-more)**: Top up at convenience stores, supermarkets, or via the **MPay app** linked to local bank cards.  
+
+---
+
+### 📱 Digital Option
+- **[MPay app](guide://tell-more)**: Macau Pass also offers a mobile wallet version. You can bind it to UnionPay cards (including Hong Kong UnionPay) and use QR code payments across Macao.  
+
+---
+
+### Travel Tip
+For tourists, buying at **7‑Eleven or Circle‑K near the border gates or ferry terminals** is the easiest option. If you’re planning heavy bus/LRT use, the card pays for itself quickly thanks to fare discounts.  
+
+Would you like me to map out the **[nearest Macau Pass purchase points to Zhuhai Port](guide://tell-more)** so you can grab one as soon as you arrive?  
+
+Sources: 
